[gd_scene load_steps=3 format=3 uid="uid://c11fsjadtfkkr"]

[ext_resource type="Script" path="res://Scenes/Views/dialog_view.gd" id="1_ib506"]
[ext_resource type="Texture2D" uid="uid://bh7644ei8f4g6" path="res://Sprites/ItemSprites/mushroom_item.png" id="2_12fu4"]

[node name="DialogView" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 8
script = ExtResource("1_ib506")
test = true

[node name="CharacterIconLeft" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -256.0
offset_right = 256.0
grow_vertical = 0
texture = ExtResource("2_12fu4")
expand_mode = 1
stretch_mode = 4

[node name="CharacterIconRight" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -256.0
offset_top = -256.0
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("2_12fu4")
expand_mode = 1
stretch_mode = 4

[node name="ConversationText" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -362.0
offset_top = -202.0
offset_right = 369.0
offset_bottom = -14.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/normal_font_size = 41
text = "Test Text"
scroll_active = false

[node name="TextTimer" type="Timer" parent="."]
wait_time = 0.06

[node name="AnswerButton1" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 863.0
offset_top = 626.0
offset_right = 1041.0
offset_bottom = 706.0

[node name="AnswerButton2" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 670.0
offset_top = 631.0
offset_right = 848.0
offset_bottom = 711.0

[node name="AnswerButton3" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 474.0
offset_top = 627.0
offset_right = 652.0
offset_bottom = 707.0

[node name="AnswerButton4" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 278.0
offset_top = 622.0
offset_right = 456.0
offset_bottom = 702.0

[connection signal="timeout" from="TextTimer" to="." method="_incrementText"]
[connection signal="pressed" from="AnswerButton1" to="." method="_selectAnswer" binds= [0]]
[connection signal="pressed" from="AnswerButton2" to="." method="_selectAnswer" binds= [1]]
[connection signal="pressed" from="AnswerButton3" to="." method="_selectAnswer" binds= [2]]
[connection signal="pressed" from="AnswerButton4" to="." method="_selectAnswer" binds= [3]]
